Added a new Users table with some adapters to make api CRUD calls
